--- a/estilos/styleInicio.css
+++ b/estilos/styleInicio.css
@@ -7,11 +7,10 @@
 }
 .container{
     display: grid;
-    grid-template-columns: 200px 300px 900px;
-    grid-template-rows: 20vh 25vh 25vh 25vh;
+    grid-template-columns: 210px 300px 37vw;
+    grid-template-rows: 20vh 25vh 25vh 18vh;
 }
 body{
-    margin: 0px;
     padding: 0px;
     width: 100vw;
     height: 100vh;
@@ -29,13 +28,14 @@ header ul{
 }
 li{
     padding: 10px;
-    display: inline-block;    
+    display: inline-block;
+  
 }   
 .menu li:hover{
     font-size: 1.3em;
     color: chocolate;
     transition: 0.2s;
-    background:rgb(54, 54, 54) ;
+    background:rgb(54, 54, 54);
     font-weight: bolder;
     cursor: pointer;
 }
@@ -63,6 +63,7 @@ li{
     grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 4;
+    margin-left: 80px;
 }
 .box3 img{
     width: 50px;
