--- a/estilos/styleInicio.css
+++ b/estilos/styleInicio.css
@@ -8,7 +8,7 @@
 }
 
 *{/*Reset da pagina*/
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0px;
     padding: 0px;
 }
@@ -19,8 +19,8 @@
 }
 body{/*Configurações padão da Página*/
     width: 100%;
-    height: 100vh;
-    background: linear-gradient(-10deg, var(--fundoclaro) 50%, var(--fundoescuro) 50.2%  100%);/*Define a linha de estilo que corta o inicio da página*/
+    height: 100%;
+    background: linear-gradient(-10deg, var(--fundoclaro) 83%, var(--fundoescuro) 17.2%  100%);/*Define a linha de estilo que corta o inicio da página*/
     background-repeat: no-repeat;
 }
 header ul{/*Parametros do cabeçalho*/
@@ -32,7 +32,7 @@ header ul{/*Parametros do cabeçalho*/
     box-shadow: 1px 1px 5px white;
     font-size: 1em;
 }
-li{/*Define o estilo da minha lista de Menu (Topo da página)*/
+header > ul > li{/*Define o estilo da minha lista de Menu (Topo da página)*/
     padding: 10px;
     display: inline-block;  
 }   
@@ -50,46 +50,69 @@ li{/*Define o estilo da minha lista de Menu (Topo da página)*/
     border-radius: 50%;
     box-shadow: 1px 1px 7px var(--fundoclaro);    
 }
-.box1{/**/
+.box1{/*Posicionamento da foto no Grid*/
     grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-end: 2;
     grid-row-start: 2;
     grid-row-end: 4;    
 }
-.box2{/**/
+.box2{/*Posicionamento da apresentação ( nome e função)  */
     grid-column-start: 3;
     grid-column-end: 3;
     grid-row-start: 2;
-    grid-row-end: 4;
+    grid-row-end: 2;
     margin-left: 10px;       
 }
-.box3{/**/  
+.box3{/*Posicionamento dos botões de redes sociais*/  
     grid-column-start: 3;
     grid-column-end: 3;
     grid-row-start: 3;
-    grid-row-end: 4;
-    margin-left: 10px;    
+    grid-row-end: 3;
+    margin-left: 10px;   
 }
-.box3 img{/**/
+.box3 img{/*Configurações das imagens de redes sociais*/
     width: 50px;
     height: 50px;
 }
-.box3 img:hover{/**/
+.box3 li{/*Configurações da lista de redes sociais*/
+    display: inline-block;
+}
+.box3 img:hover{/*Efeito de zoom das redes sociais*/
     width: 60px;
     height: 60px;    
     transition: 0.2s;  
     cursor: pointer;
 }
-#sobre{
+#caixasdetexto{/*Configurações das divis (Sobre) que estão dentro do article que estão dentro de section*/
     width: 900px;
     height: max-content;
-    position: absolute;
-    margin-left: 300px;
-    padding: 10px;
-    color: var(--fontebranca);
+    position: relative;
+    margin: auto;
+    margin-top: 10px;
+    padding: 20px;
+    color: rgb(175, 174, 174);
     background:#071325;
     border-radius: 10px;
 }
-p{
+#caixasdetexto > ul > li{/*Configurações da lista dentro de (sobre)*/
+    padding: 3px;
+    margin-left: 50px;
+}
+div > p{/*Configurações dos paragrafos dentro de (Sobre)*/
     text-indent: 25px;
+    padding: 10px;
+    line-height: 25px;
+}
+h3{/*Configurações dos titulos H3 dentro de (Sobre)*/
+    color: chocolate;
+}
+footer{
+    max-width: 100vw;
+    height: 30px;
+    padding: 20px;
+    margin-top: 10px;
+    background: #071325;
+    text-align: center;
+    color: rgb(175, 174, 174) ;
+    
 }
