--- a/estilos/stylecelular.css
+++ b/estilos/stylecelular.css
@@ -1,10 +1,24 @@
 @charset "UTF-8";
 
-@media (max-width:480px) {
+@media screen and (oriantation: portrait) {
     body{/*Configurações padão da Página*/
         width: 100%;
         height: 100%;
         background: linear-gradient(-10deg, red 83%, var(--fundoescuro) 17.2%  100%);/*Define a linha de estilo que corta o inicio da página*/
-        background-repeat: no-repeat;    
+        background-repeat: no-repeat;       
 }
+
+
+
+
+
+
+
+@media screen and (orientation: landscape) {
+    body{/*Configurações padão da Página*/
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(-10deg, black 83%, var(--fundoescuro) 17.2%  100%);/*Define a linha de estilo que corta o inicio da página*/
+        background-repeat: no-repeat;
+    
 }
