--- a/estilos/stylecelular.css
+++ b/estilos/stylecelular.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@media (max-width:480px){
+@media (max-width:600px){
     header ul{/*Parametros do cabeçalho*/
         width: 100%;
         height: 50px;
@@ -10,38 +10,44 @@
         box-shadow: 1px 1px 5px white;
         font-size: 0.8em;
     }
-.container{
-    display: grid;
-    grid-template-rows: 38vh 10vh 15vh;
-    grid-template-columns: repeat(auto-fit minmax(100px, 1fr));/*Aqui estou usando uma função do grid para responsividade*/
-}
-#fotoCapa{/*Define as configurações da foto do perfil*/
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    box-shadow: 1px 1px 7px var(--fundoclaro);    
-}
-.box1{
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 1;
-    grid-row-end: 1;
-    text-align: center;
-}
-.box2{
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 3;
-    grid-row-end: 3;
-    text-align: center;
-    margin-top: 10px;
-}
-.box3{
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 2;
-    grid-row-end: 2;
-    text-align: center;
-    margin-top: 10px; 
-}
+    body{/*Configurações padão da Página*/
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(-10deg, var(--fundoclaro) 92%, var(--fundoescuro) 7%  100%);/*Define a linha de estilo que corta o inicio da página*/
+        background-repeat: no-repeat;
+    }
+    .container{
+        display: grid;
+        grid-template-rows: 38vh 10vh 15vh;
+        grid-template-columns: repeat(auto-fit minmax(100px, 1fr));/*Aqui estou usando uma função do grid para responsividade*/
+    }
+    #fotoCapa{/*Define as configurações da foto do perfil*/
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        box-shadow: 1px 1px 7px var(--fundoclaro);    
+    }
+    .box1{
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 1;
+        grid-row-end: 1;
+        text-align: center;
+    }
+    .box2{
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 3;
+        grid-row-end: 3;
+        text-align: center;
+        margin-top: 10px;
+    }
+    .box3{
+        grid-column-start: 1;
+        grid-column-end: 1;
+        grid-row-start: 2;
+        grid-row-end: 2;
+        text-align: center;
+        margin-top: 10px; 
+    }
 }
